# alibz

./: .gitignore  README.md  dependencies.txt  peaky_demo_v1.ipynb  peaky_finder.py  peaky_fitter.py  peaky_indexer.py  peaky_maker.py  peaky_pca_demo.ipynb  pyproject.toml  ree_test.pkl  socketio_server.py
alibz/: __init__.py  background_pca.py  cli.py  detections.py  detector.py  elements.py  gpu.py  inspection.py  minor_lines.py  mw2_112.py  peak_window_pca.py  peaky_corpus.py  peaky_finder.py  peaky_fitter.py  peaky_indexer.py  peaky_indexer_v2.py  peaky_indexer_v3.py  peaky_maker.py  peaky_pca.py  pipeline.py  profile_pca.py  profiles.py  provenance.py  refinement.py  relative_profiles.py  run_corpus_pca.py  scattering.py  session_calibration.py  synthetic.py  synthetic_calibration.py  telemetry.py  whole_rock.py
alibz/utils/: __init__.py  absorption.py  colors.py  constants.py  database.py  dataloader.py  sahaboltzmann.py  stark.py  voigt.py  wavelength.py
alibz_front_end/: README.md  package-lock.json  package.json
alibz_front_end/src/: App.vue
bench/: benchmark.py  coherence.py  nist_forward.py  sensitivity.py  synth_cases.py
corrections/: corpus_peak_shape_pca_05x_10pc.json  corpus_peak_shape_pca_05x_10pc.npz  detector.json
db/: atomic_line_sources.json  observed_lines_nist.tsv  quantitative_lines_se_th_u.tsv
docs/: atomic_data.md  development_guide.md  fit_pipeline.md  gpu_lessons_learned.md  synthetic_generator.md  temporary_review_plan.md  transformer_plan.md  whole_rock_prior.md
docs/mw2_112/: README.md  TODO.md  analysis_plan.md  peak_window_pca.md  provenance.md
jobs/: explicit_synthetic_demo.csv  synthetic_instrument_mw2_individual.json
logs/: fit_inspector_actions.jsonl
notebooks/: demo_notebook.ipynb  fit_inspection.ipynb  mw2112_sim_to_real.ipynb  peaky_data.ipynb  peaky_demo_v1.ipynb  peaky_finder_peaks.ipynb  peaky_syndexer.ipynb  pipeline_walkthrough.ipynb  profile_pca_walkthrough.ipynb  track_ab_results.ipynb
scripts/: __init__.py  adjudicate_suspects.py  analyze_mw2_112_k_resonance.py  build_mw2_112_relative_profiles.py  build_whole_rock_prior.py  calibrate_synthetic_instrument.py  compact_corpus_peak_pca.py  demo_explicit_synthetic.py  failure_report.py  fit_inspector.py  mw2_112.py  mw2_112_provenance.py  reassemble_relative_profiles.py  regenerate_mw2_112_relative_profiles.py  report_mw2_112_relative_profiles.py  run_corpus_pca.py  run_mw2_112.py  run_mw2_112_peak_window_pca.py  update_heavy_atomic_lines.py
scripts/adjudication_out/: flagged.json  manifest.json
tests/: test_atomic_support.py  test_colors.py  test_detector.py  test_external_io.py  test_inspection.py  test_minor_lines.py  test_mw2_112_provenance.py  test_mw2_112_runner.py  test_peak_window_pca.py  test_peaky_finder_accuracy.py  test_peaky_finder_fast.py  test_peaky_indexer.py  test_peaky_indexer_v2.py  test_peaky_pca.py  test_physics_integration.py  test_pipeline.py  test_profiles.py  test_provenance.py  test_refinement.py  test_relative_profiles.py  test_roundtrip_synthetic.py  test_sahaboltzmann.py  test_scattering.py  test_self_absorption.py  test_session_calibration.py  test_stark_ne.py  test_synthetic_generator.py  test_wavelength.py  test_weighted_solve.py  test_whole_rock.py
utils/: database.py  dataloader.py  sahaboltzmann.py
