[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "alibz"
version = "0.1.0"
description = "LIBS spectral peak finding, fitting, indexing, and PCA analysis toolkit"
license = "Unlicense"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "scipy",
    "scikit-learn",
    "scikit-optimize",
    "matplotlib",
    "pulp",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
gpu = [
    "cupy-cuda12x",
]
notebook = [
    "nbformat",
    "nbclient",
    "ipykernel",
]

[project.scripts]
alibz-analyze = "alibz.cli:main"
run-corpus-pca = "scripts.run_corpus_pca:main"
background-pca = "alibz.background_pca:main"

[tool.setuptools.packages.find]
include = ["alibz*", "scripts*"]

[tool.setuptools.data-files]
"share/alibz/db" = [
    "db/abundance_92.csv",
    "db/el_lines92.pickle",
    "db/no_lines26.pickle",
]
"share/alibz/db/ionization" = ["db/ionization/*.pickle"]
